spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__named_struct_patterns_errors_if_missing_bindings.snap
---
source: spade-tests/src/hir_lowering.rs
---
struct Test{a: bool, b: bool}

fn main() -> Test {
    Test$(a: true)
}


error: Missing argument: b
  ┌─ testinput:4:10
  │
4 │     Test$(a: true)
  │          ^^^^^^^^^ Missing argument: b


